2006-02-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:
	
	Remove workaround for broken profile now that
	https://bugzilla.mozilla.org/show_bug.cgi?id=326013
	is fixed.

2006-02-07  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-node.c: (ephy_node_new_from_xml):

	Save tons of g_type_from_name calls.

2006-02-06  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (main):

	Fix handling of non-ascii extra arguments.

2006-02-06  Christian Persch  <chpe@cvs.gnome.org>

        * m4/gecko.m4:
	
	More xulrunner fixes.

2006-02-06  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (open_urls), (queue_commands), (main):

	Fix opening of local files. Bug #330104.

2006-02-06  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Go back to AM_GLIB_GNU_GETTEXT for now, until
	intltool 0.34.2 is more widespread.

2006-02-06  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Fix quoting.

2006-02-06  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Fix xulrunner detection logic.

	* configure.ac:
	A po/Makevars:
	* src/Makefile.am:
	* doc/reference/Makefile.am:

	Remove AM_GLIB_GNU_GETTEXT, use plain AM_GNU_GETTEXT.

	* data/glade/Makefile.am:

	Fix distcheck with certs manager disabled.

2006-02-05  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:
	* configure.ac:
	* embed/mozilla/Makefile.am:

	Changes to support xulrunner trunk (gecko 1.9).

	* embed/mozilla/mozilla-embed-single.cpp:

	Go back to continuing after failed GetPassword;
	fixes getting the password list in case one item
	is corrupted.

2006-02-05  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c:

	Show the backend in the about box.

2006-02-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:

	Only use the major version in the user agent string.

2006-02-05  Crispin Flowerday  <gnome@flowerday.cx>

	* data/default-prefs-common.js: 
